sesiones completas y contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -127,6 +127,18 @@
 		text-align:center;}
 }
 
+	.column {
+	    float: left;
+	    width: 50%;
+	    padding: 10px;
+	}
+
+	.row:after {
+	    content: "";
+	    display: table;
+	    clear: both;
+	}
+
 </style>
 <!-- fin acciones para formulario -->
 <!--[if lt IE 9]><script src="js/html5shiv.js" type="text/javascript"></script><![endif]-->
@@ -287,18 +299,55 @@
           <!-- /.container-fluid -->
         </nav>
     </div>
-  	<div class="imagen-catedra row">
-    	<img src="../Catedra Manuel Ancízar_files/pendon.png" width="90%" alt="">
-    </div>
     
 <div class="intro-texto row">
-  
-  <article>
-	<center>
-	<h3>Contacto</h3>
-	</center>
+	
+	<article>
+		<h3>Director de la Cátedra</h3><br>
+		<font size="5">Tomás Enrique Léon Sicard</font>
+		<p> <B>Correo:</B> teleons@unal.edu.co </p>
+		<br>
+	</article>
 
-   </article>
+	<article>
+		<h3>Atención a estudiantes</h3><br>
+
+		<h4><B> Horario </B></h4><br>
+		<img src="../images/2018-1/HorarioAtencion.jpg" width="100%" heigth="100%" id="horario"><br><br><br>
+
+		<div class="row">
+	        <div class="column">
+	        	<h4><B> Coordinador general: </B></h4>
+	        	<ul>
+	        		<li>Julie Carolina Gallego Herrera - jcgallegoh@unal.edu.co</li>
+	        	</ul>
+	        </div>
+	        <div class="column" >
+	        	<h4><B> Coordinador informático: </B></h4>
+	        	<ul>
+	        		<li>Juan Camilo López Solano - juclopezso@unal.edu.co</li>
+	        	</ul>
+	        </div>
+    	</div>
+
+		<h4><B> Monitores </B></h4><br>
+		<ul>
+			<li>Nicolas Felipe Andrade Gallardo - nfandradeg@unal.edu.co</li>
+			<li>Daniel Alejandro Marquez Bocanegra - damarquezb@unal.edu.co</li>
+			<li>Miguel Andrés Saldaña Herrera - masaldanah@unal.edu.co</li>
+			<li>Diego Felipe Pulido Beltran - dfpulidob@unal.edu.co</li>
+			<li>Pedro Gustavo Jimenez Herrera - pgjimenezh@unal.edu.co</li>
+			<li>Angela Erazo Narvaez - aerazon@unal.edu.co</li>
+			<li>Heidy Lorena Sandoval Orjuela - hlsandovalo@unal.edu.co</li>
+			<li>Carolina Ortiz Domínguez - gcortizdo@unal.edu.co</li>
+			<li>Diana Milena Marentes Hortua - dmmarentesh@unal.edu.co</li>
+			<li>Laura Juliana Rico Tolosa - lajricoto@unal.edu.co</li>
+		</ul>
+		<br><br>
+
+	</article>
+
+
 </div>
 
          
